# daemonize

./: CMakeLists.txt  README.md  child.cpp  daemonize.cpp  daemonize.h  detach.cpp  main.cpp  utils.cpp
include/export/daemon/: daemonize.h  daemonize.hpp
include/local/daemon/: utils.hpp
